--- a/src/css/main.css
+++ b/src/css/main.css
@@ -43,3 +43,41 @@
 .trailer .button {
   padding: 25px 20px;
 }
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #000000a1;
+  opacity: 1;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.no-scroll {
+  overflow: hidden;
+}
+.modal {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #acacac;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  min-width: 400px;
+  min-height: 300px;
+}
+.button-close {
+  align-self: flex-end;
+  background-color: #0a3853;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
